# regex-benchmarks

./: Cargo.toml  README.md
benches/: bench.rs  pg3200.txt  re2.cpp
