[package]
name = "regex-benchmarks"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]

[dependencies]
#regex = "*"
#regex = { path = "../regex" }
regex = { git = "https://github.com/rust-lang-nursery/regex.git", branch = "dfa" }

[[bench]]
name = "bench"
path = "benches/bench.rs"
test = true
bench = true

